--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -185,6 +185,7 @@ input, select, textarea {
 
 	p {
 		margin: 0 0 2rem 0;
+		font-style: italic;
 	}
 
 		p.major {
@@ -205,11 +206,13 @@ input, select, textarea {
 
 	h1 {
 		font-size: 3.5rem;
+		font-weight: bold;
 		line-height: 1.2;
 	}
 
 	h2 {
 		font-size: 2.25rem;
+		font-weight: bold;
 	}
 
 	h3 {
